[package]
name = "anonlink"
version = "0.1.5"
authors = ["StackOverflowExcept1on"]
edition = "2024"
description = "Command line tool to automatically patch link.exe to remove Rich PE Header"
repository = "https://github.com/StackOverflowExcept1on/anonlink"
license = "MIT"
keywords = ["linker", "patcher", "rich-pe"]
categories = ["command-line-utilities"]

[dependencies]
thiserror = "2.0"
pelite = "0.10"
pdb = "0.8"
ureq = "3.1"
iced-x86 = "1.21"

[profile.release]
opt-level = "z"
strip = "symbols"
lto = true
panic = "abort"
codegen-units = 1
